--- a/default/app.conf
+++ b/default/app.conf
@@ -1,11 +1,12 @@
 [launcher]
 author = brendanmacooper
-version = 10.0.0
+version = __VERSION_PLACEHOLDER__
 description = Send a HTTP request with a customised payload & headers
 
 [ui]
-is_visible = 0
+is_visible = 1
 label = HTTP Alert Action
+supported_themes = light,dark
 
 [package]
 id = ta_http_action
