--- a/default/alert_actions.conf
+++ b/default/alert_actions.conf
@@ -1,7 +1,7 @@
 [httpalert]
 is_custom = 1
-label = Send HTTP request
-description = Send HTTP request
+label = Send webhook request
+description = Send HTTP webhook request
 payload_format = json
 disabled = 0
 icon_path = appIcon.png
