--- a/default/app.conf
+++ b/default/app.conf
@@ -1,13 +1,13 @@
 [launcher]
-author = brendanmacooper
+author = rsrdesarrollo
 version = __VERSION_PLACEHOLDER__
-description = Send a HTTP request with a customised payload & headers
+description = Send HTTP requests and webhooks with customized payloads & headers
 
 [ui]
 is_visible = 1
-label = HTTP Alert Action
+label = WebhookMaster
 supported_themes = light,dark
 
 [package]
-id = ta_http_action
+id = webhookmaster
 
